# email-sender-operator

./: Dockerfile  Makefile  README.md  pyproject.toml
crd/: email-sender-config.yaml  email.yaml
email-sender-operator/: Chart.yaml  deployment.email-sender-operator.yaml  rbac.email-sender-operator.yaml  values.yaml
email-sender-operator/templates/: _helpers.tpl  crd.email-sender-config.yaml  deployment.email-sender-operator.yaml  rbac.email-sender-operator.yaml
examples/: create.sh  delete.sh
examples/custom-resources/: create.sh  delete.sh
examples/custom-resources/email-sender-configs/: mail-gun.envsubst.yaml  mail-gun.yaml  mailer-send.envsubst.yaml  mailer-send.yaml  unknown.yaml
examples/custom-resources/emails/: a-failed-email-via-mail-gun.yaml  a-failed-email-via-mailer-send.yaml  a-proper-email-via-mail-gun.envsubst.yaml  a-proper-email-via-mail-gun.yaml  a-proper-email-via-mailer-send.envsubst.yaml  a-proper-email-via-mailer-send.yaml  an-email-via-unknown.yaml  mail-gun.yaml  mailer-send.yaml
examples/secrets/: mail-gun-api-token.envsubst.yaml  mail-gun.envsubst.yaml  mailer-send-api-token.envsubst.yaml  mailer-send.envsubst.yaml
src/: crd.py  email_sender_configs.py  emails.py  handlers.py  main.py
